# hydrogram

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.rst  CONDE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  NEWS.rst  NOTICE  README.md  cherry-pick-pyro.sh  hatch_build.py  pyproject.toml  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: code-style.yml  python.yml
compiler/api/: __init__.py  compiler.py  docs.json
compiler/api/source/: main_api.tl
compiler/api/template/: combinator.txt  type.txt
compiler/docs/: __init__.py  compiler.py
compiler/docs/template/: bound-methods.rst  methods.rst  toctree.txt  types.rst
compiler/errors/: compiler.py  sort.py
compiler/errors/source/: 303_SEE_OTHER.tsv  400_BAD_REQUEST.tsv  401_UNAUTHORIZED.tsv  403_FORBIDDEN.tsv  406_NOT_ACCEPTABLE.tsv  420_FLOOD.tsv  500_INTERNAL_SERVER_ERROR.tsv  503_SERVICE_UNAVAILABLE.tsv
compiler/errors/template/: class.txt  sub_class.txt
dev_tools/: cherry-pick-pyro.sh  cherry_pick_pyro.py  generate_docs_json.py
docs/source/: conf.py  hydrogram-vs-pyrogram.rst  index.rst  releases.rst  support.rst
docs/source/api/: client.rst  decorators.rst  filters.rst  handlers.rst
docs/source/faq/: client-started-but-nothing-happens.rst  code-hangs-when-calling-stop-restart-add-remove-handler.rst  how-to-avoid-flood-waits.rst  how-to-use-webhooks.rst  index.rst  migrating-the-account-to-another-data-center.rst  peer-id-invalid-error.rst  socket-send-oserror-timeouterror-connection-lost-reset.rst  sqlite3-interfaceerror-error-binding-parameter.rst  sqlite3-operationalerror-database-is-locked.rst  the-account-has-been-limited-deactivated.rst  unicodeencodeerror-codec-cant-encode.rst  uploading-with-urls-gives-error-webpage-curl-failed.rst  using-multiple-clients-at-once-on-the-same-account.rst  using-the-same-file-id-across-different-accounts.rst  what-are-the-ip-addresses-of-telegram-data-centers.rst  why-is-the-api-key-needed-for-bots.rst  why-is-the-client-reacting-slowly-in-supergroups-channels.rst
docs/source/intro/: install.rst  quickstart.rst
docs/source/start/: auth.rst  errors.rst  invoking.rst  migration-guide.rst  setup.rst  updates.rst
docs/source/topics/: advanced-usage.rst  client-settings.rst  create-filters.rst  debugging.rst  more-on-updates.rst  mtproto-vs-botapi.rst  proxy.rst  scheduling.rst  serializing.rst  smart-plugins.rst  speedups.rst  storage-engines.rst  synchronous.rst  test-servers.rst  text-formatting.rst  use-filters.rst  voice-calls.rst
hydrogram/: __init__.py  client.py  dispatcher.py  emoji.py  file_id.py  filters.py  mime_types.py  sync.py  utils.py
hydrogram/connection/: __init__.py  connection.py
hydrogram/connection/transport/: __init__.py
hydrogram/crypto/: __init__.py  aes.py  mtproto.py  prime.py  rsa.py
hydrogram/enums/: __init__.py  auto_name.py  chat_action.py  chat_event_action.py  chat_member_status.py  chat_members_filter.py  chat_type.py  message_entity_type.py  message_media_type.py  message_service_type.py  messages_filter.py  next_code_type.py  parse_mode.py  poll_type.py  sent_code_type.py  user_status.py
hydrogram/errors/: __init__.py  rpc_error.py
hydrogram/errors/pyromod/: __init__.py  listener_stopped.py  listener_timeout.py
hydrogram/filters/: __init__.py  base.py  command.py  logic.py
hydrogram/handlers/: __init__.py  callback_query_handler.py  chat_join_request_handler.py  chat_member_updated_handler.py  chosen_inline_result_handler.py  deleted_messages_handler.py  disconnect_handler.py  edited_message_handler.py  error_handler.py  handler.py  inline_query_handler.py  message_handler.py  poll_handler.py  raw_update_handler.py  user_status_handler.py
hydrogram/helpers/: __init__.py  helpers.py
hydrogram/methods/: __init__.py
hydrogram/methods/advanced/: __init__.py  invoke.py  resolve_peer.py  save_file.py
hydrogram/methods/auth/: __init__.py  accept_terms_of_service.py  check_password.py  connect.py  disconnect.py  get_password_hint.py  get_sessions.py  initialize.py  log_out.py  recover_password.py  resend_code.py  send_code.py  send_recovery_code.py  sign_in.py  sign_in_bot.py  sign_up.py  terminate.py
hydrogram/methods/bots/: __init__.py  answer_callback_query.py  answer_inline_query.py  answer_web_app_query.py  delete_bot_commands.py  get_bot_commands.py  get_bot_default_privileges.py  get_chat_menu_button.py  get_game_high_scores.py  get_inline_bot_results.py  request_callback_answer.py  send_game.py  send_inline_bot_result.py  set_bot_commands.py  set_bot_default_privileges.py  set_chat_menu_button.py  set_game_score.py
hydrogram/methods/chats/: __init__.py  add_chat_members.py  archive_chats.py  ban_chat_member.py  close_forum_topic.py  close_general_topic.py  create_channel.py  create_forum_topic.py  create_group.py  create_supergroup.py  delete_channel.py  delete_chat_photo.py  delete_forum_topic.py  delete_supergroup.py  delete_user_history.py  edit_forum_topic.py  edit_general_topic.py  get_chat.py  get_chat_event_log.py  get_chat_member.py  get_chat_members.py  get_dialogs.py  (+31 more)
hydrogram/nav/: __init__.py  pagination.py
hydrogram/parser/: __init__.py  html.py  markdown.py  parser.py  utils.py
hydrogram/raw/: __init__.py
hydrogram/session/: __init__.py  auth.py  session.py
hydrogram/storage/: __init__.py  base.py  file_storage.py  memory_storage.py  sqlite_storage.py  storage.py
hydrogram/types/: __init__.py  list.py  object.py  update.py
news/: +emoji.removal.rst  +misc.misc.rst  +sync.removal.rst  1.feature.rst  11.feature.rst  12.feature.rst  14.bugfix.rst  14.misc.rst  15.fix.rst  15.misc.rst  20.bugfix.rst  20.feature.rst  21.bugfix.rst  23.feature.rst  24.feature.rst  24.misc.rst  25.bugfix.rst  32.feature.rst  33.feature.rst  34.doc.rst  38.feature.rst  43.feat.rst  45.bugfix.rst  49.misc.rst  5.feature.rst
tests/: test_file_id.py
tests/filters/: __init__.py  test_command.py
tests/parser/: test_html.py
(+324 files in other folders)
