[project]
name = "Hydrogram"
dynamic = ["version"]
description = "Elegant, modern and asynchronous Telegram MTProto API framework in Python for users and bots"
authors = [{ name = "Amano LLC", email = "contact@amanoteam.com" }]
dependencies = ["pyaes==1.6.1", "pysocks==1.7.1"]
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["telegram chat messenger mtproto api client library python"]

[tool.hatch.version]
path = "hydrogram/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[project.urls]
Tracker = "https://github.com/AmanoTeam/Hydrogram/issues"
Community = "https://t.me/HydrogramNews"
Source = "https://github.com/AmanoTeam/Hydrogram"
Documentation = "https://hydrogram.amanoteam.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.3",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "twine>=4.0.2",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=7.2.6",
    "furo>=2023.9.10",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
    "tests",
    "requirements.lock",
    "requirements-dev.lock",
    ".github",
    ".gitignore",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
package = "hydrogram"
